# top-auto-upgrader

./: Cargo.toml  ReadMe.md
install/: top-au-daemon.sh  top-au-install.sh
src/: error.rs  frequency.rs  main.rs
src/commands/: file.rs  mod.rs  topio.rs
src/config/: au_config.rs  env_config.rs  mod.rs  temp_config.rs  user_config.rs
src/logic/: keep_alive.rs  logic_runner.rs  mod.rs  upgrade_topio.rs
src/version/: handler.rs  mod.rs  release_info.rs  sem_version.rs
