[package]
name = "top-auto-upgrader"
version = "0.1.0-alpha"
edition = "2021"
authors = ["Charles.Liu@upblocks.io"]
description = "Auto Upgrade Service for TOP-Chain"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.21", features = ["full"] }
daemonize = "0.4.1"
rand = "0.8"
rsa = "0.7"
hex = "0.4"