[package]
name = "top-auto-upgrader"
version = "0.1.0-alpha"
edition = "2021"
authors = ["Charles.Liu@upblocks.io"]
description = "Auto Upgrade Service for TOP-Chain"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
daemonize = "0.4.1"
hex = "0.4"
hyper = { version = "0.14", features = ["client", "http2", "tcp"] }
hyper-tls = "0.5.0"
json = { version = "0.12" }
rand = "0.8"
rsa = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.21", features = ["full"] }
top-keystore-rs = { git = "https://github.com/CharlesLiu-TOPNetwork/top-keystore-rs", default-features = false }

[dev-dependencies]
tokio-test = "0.4"
